[gd_scene load_steps=5 format=3 uid="uid://cc6yft8cbmu7r"]

[ext_resource type="Script" path="res://Scripts/tooltip.gd" id="1_l3apk"]
[ext_resource type="PackedScene" uid="uid://c0cvuts4mf1jl" path="res://Scenes/item_attribute_slot.tscn" id="1_vcvi2"]
[ext_resource type="PackedScene" uid="uid://dwr1xjfj6y2dv" path="res://Assets/mushrooms.glb" id="3_hcapm"]
[ext_resource type="Script" path="res://Scenes/spin_node.gd" id="3_yb5be"]

[node name="Tooltip" type="CanvasLayer" groups=["Tooltips"]]
script = ExtResource("1_l3apk")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 13

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "<ItemName>"

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Descriptions" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemDescription" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Descriptions"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<description>"
autowrap_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Descriptions"]
layout_mode = 2
text = "Attribute(s):"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Descriptions"]
layout_mode = 2
theme_override_constants/h_separation = 30
columns = 2

[node name="ItemAttributeSlot" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Descriptions/GridContainer" instance=ExtResource("1_vcvi2")]
layout_mode = 2

[node name="Visuals" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(66, 66)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SubViewportContainer/SubViewport"]
script = ExtResource("3_yb5be")

[node name="mushrooms2" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SubViewportContainer/SubViewport/Node3D" instance=ExtResource("3_hcapm")]
transform = Transform3D(1.01, 0, 0, 0, 1.01, 0, 0, 0, 1.01, 0, 0, 0)
visible = false

[node name="Camera3D" type="Camera3D" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SubViewportContainer/SubViewport"]
transform = Transform3D(0.63497, 0.47097, -0.612372, -0.150384, 0.852868, 0.5, 0.757758, -0.225394, 0.612372, -0.544737, 0.611243, 0.522414)
projection = 1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SubViewportContainer/SubViewport"]
transform = Transform3D(0.173648, -0.204753, -0.963287, 0, 0.978148, -0.207912, 0.984808, 0.0361035, 0.169854, 0, 0, 0)
light_energy = 1.508

[node name="SpotLight3D" type="SpotLight3D" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.897366, 0.441287, 0, -0.441287, 0.897366, -0.0303076, 0.651762, 1.16542)

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals"]
layout_mode = 2
size_flags_vertical = 6
text = "<price>"
horizontal_alignment = 1

[node name="SellButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
text = "SELL?"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/Visuals/SellButton" to="." method="_on_sell_button_pressed"]
